[package]
name = "wmediumd_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genetlink = "0.2.4"
netlink-packet-core = "0.5.0"
netlink-packet-generic = "0.3.2"
netlink-packet-utils = "0.5.2"
futures = "0.3.16"
anyhow = "1.0.42"
tokio = { version = "1.28.2", features = ["full"] }
#futures-async-stream = "0.2.6"
